@@ -2,7 +2,4 @@ Waf 2.1
 -------
 
 - Fix the circular imports ccroot<->c_config.py
-- Remove superfluous *k in ctx.load() and other unused parameters
-  Ensure conf.load() has the same interface as ctx.load()
-- Ordered_iter_dict in python 3.7
 - Change _add_task to add_task in Runner.py
