@@ -3,6 +3,7 @@ CHANGES IN WAF 2.1.0
 * While the Waf file runs on Python 2 and 3, creating it requires version 3
 + Added wafcache
 + waf_unit_test: Added task in returned tuples, custom reports should be adapted
+~ Ensure ConfigurationContext.load and Context.load definitions are consistent and remove unused *k parameters
 - Remove waflib.Runner.PriorityTasks.appendleft
 - Remove waflib.Task.TaskBase
 - Remove the upper class of waflib.Task.Task (metaclass syntax)
